--- a/plugin.xml
+++ b/plugin.xml
@@ -28,7 +28,7 @@
     <platform name="android">
         <config-file parent="/*" target="res/xml/config.xml">
             <feature name="cordova-plugin-pml-manager">
-                <param name="android-package" value="cordova-plugin-pml-manager.cordova-plugin-pml-manager" />
+                <param name="android-package" value="com.polymorphiclabs.cordova.plugin.pml.manager" />
             </feature>
         </config-file>
         <config-file parent="/*" target="AndroidManifest.xml" />
